Issue #215: Addressing some minor mechanical PDM suggestions.